syntax = "proto3";

package payment;

import "google/api/annotations.proto";

service PaymentService {
	// Customer Methods
	rpc CreateCustomer (CreateCustomerRequest) returns (Customer) {
		option (google.api.http) = {
			post : "/v1/customer"
			body : "*"
		};
	}

	rpc GetCustomer (GetCustomerRequest) returns (Customer) {
		option (google.api.http) = {
			get : "/v1/customer/{customerID}"
		};
	}

	rpc UpdateCustomer (UpdateCustomerRequest) returns (Customer) {
		option (google.api.http) = {
			post : "/v1/customer/{customerID}"
			body : "*"
		};
	}

	rpc HealthCheck (HealthCheckRequest) returns (HealthCheckResponse) {
		option (google.api.http) = {
			get : "/payment/healthcheck"
		};
	}
}

// Customer method message group
message Customer {
	int64 customerID = 1;
	string name = 2;
	string email = 3;
	string stripe_customer_key = 4;
	string stripe_charge_date = 5;
}

message GetCustomerRequest {
	int64 customerID = 1;
	string name = 2;
	string email = 3;
	string stripe_customer_key = 4;
}

message UpdateCustomerRequest {
	int64 customerID = 1;
	string name = 2;
	string email = 3;
	string stripe_customer_key = 4;
	string stripe_charge_date = 5;
}


message CreateCustomerRequest {
	string name = 1;
	string email = 2;
	string stripe_charge_date = 3;
}

message HealthCheckRequest {

}

message HealthCheckResponse {
	bool isHealthy = 1;
}
